Add script ID to runs (#41)
